<?xml version="1.0"?>
<package format="2">
  <name>bspline</name>
  <version>0.0.0</version>
  <description>The bspline package</description>

  <maintainer email="lguanrui.github@gmail.com">lguanrui</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>Eigen3</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
