<?xml version="1.0"?>
<package format="3">
  <name>fast_planner_msgs</name>
  <version>1.0.0</version>
  <description>fast_planner_msgs</description>
  <maintainer email="lguanrui.github@gmail.com">Guanrui Li</maintainer>
  <license>BSD</license>
  <author>Guanrui Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
