<?xml version="1.0"?>
<package format="3">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>The fast_planner package</description>

  <maintainer email="lguanrui.github@gmail.com">Guanrui Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>traj_utils</depend>
  <depend>Eigen3</depend>
  <depend>cv_bridge</depend>
  <depend>PCL</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
