<?xml version="1.0"?>
<package format="2">
  <name>poly_traj</name>
  <version>0.0.0</version>
  <description>The poly_traj package</description>

  <maintainer email="lguanrui.github@gmail.com">Guanrui Li</maintainer>

  <license>BSD</license>

  <author email="lguanrui.github@gmail.com">Guanrui Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
