<?xml version="1.0"?>
<package format="3">
  <name>traj_utils</name>
  <version>0.0.0</version>
  <description>The traj_utils package</description>

  <maintainer email="lguanrui.github@gmail.com">Guanrui Li</maintainer>

  <license>BSD</license>

  <author email="lguanrui.github@gmail.com">Guanrui Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>Eigen3</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>poly_traj</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
